--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,48 @@
 body{
-    background-color: aliceblue;
-    color: aqua;
-}
-h1{
-    text-align: center;
+    background: color #f9f7fe;
 }
 footer{
     text-align: center;
-    font-size: 0.8em;
-    color: gray;
+    font-size: 18px;
+    color: rgba(0,0,0,0.8);
+}
+.container{
+    max-width:600px;
+    margin: 60px auto;
+    padding: 30px;
+    background-color: white;
+    box-shadow: 0px 7px 29px 0px, rgba(100 ,100 , 111 ,0.2) ; 
+}
+select{
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+}
+h1{
+    text-align: center;
+    font-family:sans-serif;
+    font-size: 36px;
+}
+h2{
+    margin: 0 0 5px;
+    font-size: 28px;
+}
+.city{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px dashed rgba(0,0,0,0.2 );
+    padding: 20px 0;
+}
+.time{
+    font-size:36px;
+    font-weight: bold;;
+}
+.time small{
+    font-size: 18px;
+    vertical-align: middle;
+    line-height: 36px;
+}
+.date{
+    opacity:0.7;
 }
